--- a/.github/workflows /devsecops-pipeline.yml
+++ b/.github/workflows /devsecops-pipeline.yml
@@ -2,9 +2,10 @@ name: DevSecOps Pipeline
 
 on:
   push:
-    branches: [main,master]
+    branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   build-and-scan:
